--- a/.github/workflows/continuesintegration.yml
+++ b/.github/workflows/continuesintegration.yml
@@ -13,14 +13,12 @@ jobs:
 
     steps:
     - uses: actions/checkout@v2
-    - name: Setup .NET 2.1
+    - name: Setup .NET
       uses: actions/setup-dotnet@v1
       with:
         dotnet-version: 2.1
-    - name: Setup .NET 4.5.2
-      uses: actions/setup-dotnet@v1
-      with:
-        dotnet-version: 4.5.2
+    - name: Setup MSBuild
+      uses: microsoft/setup-msbuild@v1
     - name: Restore dependencies
       run: dotnet restore
     - name: Build
