--- a/.github/workflows/continuesintegration.yml
+++ b/.github/workflows/continuesintegration.yml
@@ -8,6 +8,14 @@ on:
 
 jobs:
   build:
+    runs-on: windows-latest
+
+    steps:
+    - uses: actions/checkout@v2
+    
+    - name: Setup MSBuild
+      uses: microsoft/setup-msbuild@v1
+  build:
 
     runs-on: ubuntu-latest
 
@@ -17,8 +25,6 @@ jobs:
       uses: actions/setup-dotnet@v1
       with:
         dotnet-version: 2.1
-    - name: Setup MSBuild
-      uses: microsoft/setup-msbuild@v1
     - name: Restore dependencies
       run: dotnet restore
     - name: Build
