--- a/.github/workflows/continuesintegration.yml
+++ b/.github/workflows/continuesintegration.yml
@@ -19,6 +19,10 @@ jobs:
         dotnet-version: 2.1
     - name: Restore dependencies
       run: dotnet restore
+    - name: Setup NuGet
+      uses: NuGet/setup-nuget@v1.0.2
+    -name: Restore NuGet packages
+      uses: nuget restore Ahorcado.sln
     - name: Build
       run: dotnet build --no-restore
     - name: Test
