--- a/.github/workflows/continuesintegration.yml
+++ b/.github/workflows/continuesintegration.yml
@@ -37,12 +37,12 @@ jobs:
     # dotnet Publish and run Acceptance Tests
     - name: dotnet publish 
       run: |
-        dotnet publish -c Release -o ahorcado .\Ahorcado
+        dotnet publish -c Release -o Ahorcado.MVC .\Ahorcado
 
     - name: Deploy to IIS
       run: |
         iisreset /stop
-        Copy-Item ./ahorcado/* C:/inetpub/wwwroot/ -Recurse -Force
+        Copy-Item ./Ahorcado.MVC/* C:/inetpub/wwwroot/ -Recurse -Force
         iisreset /start
     
     - name: Curl the website as a smoke test
