--- a/.github/workflows/continuesintegration.yml
+++ b/.github/workflows/continuesintegration.yml
@@ -30,19 +30,19 @@ jobs:
     - name: Build Net Framework
       run: msbuild Ahorcado.sln 
     - name: Build Net Core
-      run: dotnet build --no-restore 
+      run: dotnet build --no-restore --configuration Release .\Ahorcado
     - name: Test and Code Coverage
       run: dotnet test /p:CollectCoverage=true /p:CoverletOutputFormat=opencover
 
     # dotnet Publish and run Acceptance Tests
     - name: dotnet publish 
       run: |
-        dotnet publish -p:PublishProfile=FolderProfile
+        dotnet publish -c Release -o ahorcado .\Ahorcado.MVC
 
-    - name: Deploy to Prod
+    - name: Deploy to IIS
       run: |
         iisreset /stop
-        Copy-Item C:/Users/paola.giorsetti/Desktop/Ahorcado/Ahorcado.UIAutomation/bin/Release/* C:/inetpub/wwwroot/ahorcadoweb -Recurse -Force
+        Copy-Item ./ahorcado/* C:/inetpub/wwwroot/ -Recurse -Force
         iisreset /start
     
     - name: Curl the website as a smoke test
