--- a/.github/workflows/continuesintegration.yml
+++ b/.github/workflows/continuesintegration.yml
@@ -30,19 +30,16 @@ jobs:
     - name: Build Net Framework
       run: msbuild Ahorcado.sln 
     - name: Build Net Core
-      run: dotnet build --no-restore --configuration Release .\Ahorcado
+      run: dotnet build --no-restore 
     - name: Test and Code Coverage
       run: dotnet test /p:CollectCoverage=true /p:CoverletOutputFormat=opencover
 
-    # dotnet Publish and run Acceptance Tests
-    - name: dotnet publish 
-      run: |
-        dotnet publish -c Release -o ahorcado .\Ahorcado.MVC
+    # Deploy to Prod and run Acceptance Tests
 
     - name: Deploy to IIS
       run: |
         iisreset /stop
-        Copy-Item ./ahorcado/* C:/inetpub/wwwroot/ -Recurse -Force
+        Copy-Item ./ahorcado.mvc/bin/* C:/inetpub/wwwroot/ahorcadoweb -Recurse -Force
         iisreset /start
     
     - name: Curl the website as a smoke test
