--- a/.github/workflows/continuesintegration.yml
+++ b/.github/workflows/continuesintegration.yml
@@ -47,6 +47,7 @@ jobs:
 
     - name: Run Acceptance Tests
       run: |
+        msbuild Ahorcado.sln 
         dotnet build --configuration Release .\Ahorcado.UIAutomation
         cd .\Ahorcado.UIAutomation
         dotnet test
