--- a/.github/workflows/continuesintegration.yml
+++ b/.github/workflows/continuesintegration.yml
@@ -36,7 +36,7 @@ jobs:
 
     # Deploy to Prod and run Acceptance Tests
 
-    - name: dotnet publish 
+    - name: dotnet Publish 
       run: |
         dotnet publish -c Release -o ahorcado .\Ahorcado
 
