--- a/.github/workflows/continuesdeliver.yml
+++ b/.github/workflows/continuesdeliver.yml
@@ -12,19 +12,31 @@ jobs:
     runs-on: self-hosted
     
     steps:
-    - uses: actions/checkout@v1
-    - name: Setup .NET Core
+    - uses: actions/checkout@v2
+    - name: Setup .NET
       uses: actions/setup-dotnet@v1
       with:
         dotnet-version: 2.1
+    - name: Restore dependencies
+      run: dotnet restore
+    - name: Setup MSBuild
+      uses: microsoft/setup-msbuild@v1
+    - name: Setup NuGet
+      uses: NuGet/setup-nuget@v1.0.2
+      env:
+        ACTIONS_ALLOW_UNSECURE_COMMANDS: 'true'
+    - name: Restore NuGet packages
+      run: nuget restore Ahorcado.sln
+    - name: Build Net Framework
+      run: msbuild Ahorcado.sln 
+    - name: Build Net Core
+      run: dotnet build --no-restore 
     
     # Deploy to Prod and run Acceptance Tests
-    - name: Build with dotnet
-      run: dotnet build --configuration Release .\ahorcado
 
     - name: dotnet publish 
       run: |
-        dotnet publish -p:PublishProfile=FolderProfile
+        dotnet publish -c Release -o ahorcado .\ahorcado
 
     - name: Deploy to Prod
       run: |
