--- a/.github/workflows/continuesdeliver.yml
+++ b/.github/workflows/continuesdeliver.yml
@@ -29,7 +29,7 @@ jobs:
     - name: Deploy to Production
       run: |
         iisreset /stop
-        Copy-Item ./Ahorcado.UIAutomation/* C:/inetpub/wwwroot/ahorcadoweb -Recurse -Force
+        Copy-Item C:/Users/paola.giorsetti/Desktop/Ahorcado/Ahorcado.UIAutomation/bin/Release/* C:/inetpub/wwwroot/ahorcadoweb -Recurse -Force
         iisreset /start
     
     - name: Curl the website as a smoke test
