--- a/.github/workflows/continuesintegration.yml
+++ b/.github/workflows/continuesintegration.yml
@@ -40,7 +40,7 @@ jobs:
     - name: Deploy to Production
       run: |
         iisreset /stop
-        Copy-Item ./Ahorcado.MVC/* C:/inetpub/wwwroot/ahorcadoweb -Recurse -Force
+        Copy-Item ./Ahorcado.MVC/* C:/ahorcadoweb -Recurse -Force
         iisreset /start
     
     - name: Curl the website as a smoke test
